@@ -1,3 +1,6 @@
+* #6066: Make web links copied to clipboard, pasteable in Write, Browse,
+  Terminal (morgs)
+* Added AUTHORS (morgs)
 * Updated translations: ps, ca, bg (pootle)
 
 34
